add image with session claims

--- a/docs/backend-requests/resources/session-tokens.mdx
+++ b/docs/backend-requests/resources/session-tokens.mdx
@@ -11,10 +11,10 @@ When a user is authenticated in your application, a short-lived session token is
 
 Below are the default session claims that Clerk generates for you:
 
-* `azp`: authorized party - the url of the application that this token is authorized for.
+* `azp`: authorized party - the `Origin` header that was included in the original Frontend API request made from the user. Most commonly, it will be the URL of the application, e.g. `https://example.com`.
 * `exp`: expiration time - the time at which this token expires.
 * `iat`: issued at - the time at which this token was issued.
-* `iss`: issuer - the creator and signer of this token.
+* `iss`: issuer - the Frontend API URL of the instance, e.g. `https://clerk.example.com`.
 * `nbf`: not before - the time before which this token cannot be used.
 * `sid`: session ID - the ID of the current session.
 * `sub`: subject - the ID of the current user of the session.
@@ -23,6 +23,13 @@ Below are the default session claims that Clerk generates for you:
 * `org_slug`: organization slug - the slug of the organization that the user belongs to.
 * `org_role`: organization role - the role of the user in the organization.
 * `act`: actor - will include the ID of the impersonating user. See [user impersonation](/docs/custom-flows/user-impersonation#jwt-claims) for more information.
+
+<Images
+  width={894}
+  height={912}
+  src="/docs/images/backend-requests/session-token.webp"
+  alt="A Clerk session token payload including all of the default session claims that Clerk provides."
+/>
 
 If you want to customize your session token, you can do that by following our guide on [customizing session tokens](/docs/backend-requests/making/custom-session-token).
 
