pass correct variable to verifyClient()

--- a/docs/references/nodejs/overview.mdx
+++ b/docs/references/nodejs/overview.mdx
@@ -205,7 +205,7 @@ import { clients, sessions } from '@clerk/clerk-sdk-node';
 const cookies = new Cookies(req, res);
 const clientToken = cookies.get('__session');  
 
-const client = await clients.verifyClient(sessionToken);
+const client = await clients.verifyClient(clientToken);
 const sessionId = client.lastActiveSessionId;
 
 const session = await sessions.verifySession(sessionId, clientToken);
