--- a/docs/references/react/use-auth.mdx
+++ b/docs/references/react/use-auth.mdx
@@ -43,7 +43,7 @@ export default function ExternalDataPage() {
     fetchData();
   }, []);
 
-  return <div>{JSON.stringify(data, null, 2)}</div>;
+  return <pre>{JSON.stringify(data, null, 2)}</pre>;
 }
       ```
 
