--- a/docs/references/react/use-auth.mdx
+++ b/docs/references/react/use-auth.mdx
@@ -9,51 +9,90 @@ The `useAuth()` hook is a convenient way to access the current auth state. This 
 
 ## Usage
 
-<CodeBlockTabs options={["Next.js", "React"]}>
-  ```tsx filename="pages/index.tsx"
-  import { useAuth } from '@clerk/nextjs';
+<Tabs items={['Next.js', 'React']}>
+  <Tab>
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+      ```tsx filename="/app/pageWithData/clientComponent.tsx"
+      "use client";
 
-  export default function ExternalDataPage() {
-    const { getToken, isLoaded, isSignedIn } = useAuth();
+      import * as React from "react";
+      import { useAuth } from "@clerk/nextjs";
 
-    if (!isLoaded || !isSignedIn) {
-      // You can handle the loading or signed state separately
-      return null;
-    }
+      export default function ExternalDataPage() {
+        const [data, setData] = React.useState<object>({});
+        const { getToken, isLoaded, isSignedIn } = useAuth();
+        
+        // In this case, /api/example is a Next.js Route Handler
+        const fetchData = async () => {
+          fetch("/api/example", {
+            headers: { Authorization: `Bearer ${await getToken()}` },
+          })
+            .then((response) => response.json())
+            .then((data) => {
+              console.log("data", data);
+              setData(data);
+            });
+          return;
+        };
 
-    const fetchDataFromExternalResource = async () => {
-      const token = await getToken();
-      // fetch your data
-      return data;
-    };
+        React.useEffect(() => {
+          if (!isLoaded || !isSignedIn) {
+            // You can handle the loading or signed state separately
+          }
+          
+          fetchData();
+        }, []);
 
-    return <div>...</div>;
-  }
+        return <pre>{JSON.stringify(data, null, 2)}</pre>;
+      }
+      ```
 
-  ```
+      ```tsx filename="pages/index.tsx"
+      import { useAuth } from '@clerk/nextjs';
 
-  ```tsx filename="external-data-page.tsx"
-  import { useAuth } from '@clerk/clerk-react';
+      export default function ExternalDataPage() {
+        const { getToken, isLoaded, isSignedIn } = useAuth();
 
-  export default function ExternalDataPage() {
-    const { getToken, isLoaded, isSignedIn } = useAuth();
+        if (!isLoaded || !isSignedIn) {
+          // You can handle the loading or signed state separately
+          return null;
+        }
 
-    if (!isLoaded || !isSignedIn) {
-      // You can handle the loading or signed state separately
-      return null;
-    }
+        const fetchDataFromExternalResource = async () => {
+          const token = await getToken();
+          // fetch your data
+          return data;
+        };
 
-    const fetchDataFromExternalResource = async () => {
-      const token = await getToken();
-      // fetch your data
-      return data;
-    }
+        return <div>...</div>;
+      }
+      ```
+    </CodeBlockTabs>
+  </Tab>
 
-    return <div>...</div>;
-  }
+  <Tab>
+      ```tsx filename="external-data-page.tsx"
+      import { useAuth } from '@clerk/clerk-react';
 
-  ```
-</CodeBlockTabs>
+      export default function ExternalDataPage() {
+        const { getToken, isLoaded, isSignedIn } = useAuth();
+
+        if (!isLoaded || !isSignedIn) {
+          // You can handle the loading or signed state separately
+          return null;
+        }
+
+        const fetchDataFromExternalResource = async () => {
+          const token = await getToken();
+          // fetch your data
+          return data;
+        }
+
+        return <div>...</div>;
+      }
+      ```
+  </Tab>
+</Tabs>
 
 ## Returns
 
