--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -375,7 +375,7 @@ export default function Example() {
 <Tabs items={["Loader Function", "Action Function"]}>
   <Tab>
 
-The [`getAuth()`][get-auth] helper allows you to access the [Authentication Object][auth-obj], including the current userId. You can use this helper to protect your loader function or get data for the initial render of the route.
+The [`getAuth()`][get-auth] helper allows you to access the [Authentication Object][auth-obj], including the current `userId`. You can use this helper to protect your loader function or get data for the initial render of the route.
 
 ```tsx filename="routes/example.tsx"
 export const loader: LoaderFunction = async (args) => {
