--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -450,7 +450,7 @@ export const action: ActionFunction = async (args) => {
   if (!userId) {
     return redirect("/sign-in?redirect_url=" + args.request.url);
   }
-  // Perpare the data for the mutation
+  // Prepare the data for the mutation
   const params = { firstName: 'John', lastName: 'Wicker' };
 
   // Initialize clerkClient and perform the mutations
