--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -445,7 +445,8 @@ import { getAuth } from "@clerk/remix/ssr.server";
 import { createClerkClient } from '@clerk/remix/api.server';
 
 export const action: ActionFunction = async (args) => {
-  const { userId} = await getAuth(args)
+  // Use getAuth to retrieve user data
+  const { userId } = await getAuth(args)
 
   if (!userId) {
     return redirect("/sign-in?redirect_url=" + args.request.url);
