--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -457,7 +457,7 @@ export const action: ActionFunction = async (args) => {
   // Initialize clerkClient and perform the mutations
   const updatedUser = await createClerkClient({ secretKey: process.env.CLERK_SECRET_KEY }).users.updateUser(userId, params);
 
-  // Return the update user
+  // Return the updated user
   return { serialisedUser: JSON.stringify(updatedUser) };
 };
 ```
