--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -448,6 +448,7 @@ export const action: ActionFunction = async (args) => {
   // Use getAuth to retrieve user data
   const { userId } = await getAuth(args)
 
+  // If there is no userId, then redirect to sign-in route
   if (!userId) {
     return redirect("/sign-in?redirect_url=" + args.request.url);
   }
