add copy that guides users to our component customization docs

--- a/docs/components/organization/organization-list.mdx
+++ b/docs/components/organization/organization-list.mdx
@@ -101,6 +101,10 @@ All props below are optional.
 | `afterSelectOrganizationUrl` | <code>((org: [Organization][org-ref]) => string)</code> \| `string` | Full URL or path to navigate after selecting an organization.<br />Defaults to `undefined`. |
 | `afterSelectPersonalUrl` | <code>((org: [Organization][org-ref]) => string)</code> \| `string` | Full URL or path to navigate after selecting the personal account.<br />Defaults to `undefined`. |
 
+## Customization
+
+To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
+
 [org-ref]: /docs/references/javascript/organization/organization
 [components-ref]: /docs/components/overview
 [ap-ref]: /docs/account-portal/overview
