--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -108,6 +108,10 @@ All props below are optional.
 | `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. |
 | `initialValues` | [`SignInInitialValues`](/docs/references/javascript/types/sign-in-initial-values) | The values used to prefill the sign-in fields with. |
 
+## Customization
+
+To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
+
 [components-ref]: /docs/components/overview
 [ap-ref]: /docs/account-portal/overview
 
