--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -110,5 +110,9 @@ All props below are optional.
 | `unsafeMetadata` | `object` | An object with the key and value for unsafeMetadata that will be saved to the user after sign up.<br />E.g. `{ "company": "companyID1234" }` |
 | `initialValues` | [`SignUpInitialValues`](/docs/references/javascript/types/sign-up-initial-values) | The values used to prefill the sign-up fields with. |
 
+## Customization
+
+To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
+
 [components-ref]: /docs/components/overview
 [ap-ref]: /docs/account-portal/overview
