--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -210,6 +210,10 @@ All props below are optional.
 | `defaultOpen` | `boolean` | Controls whether the `<UserButton />` should open by default during the first render. |
 | `userProfileProps` | `object` | Specify options for the underlying [`<UserProfile />`][userprofile-ref] component. e.g. `{additionalOAuthScopes: {google: ['foo', 'bar'], github: ['qux']}}`. |
 
+## Customization
+
+To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
+
 [components-ref]: /docs/components/overview
 [ap-ref]: /docs/account-portal/overview
 [userprofile-ref]: /docs/components/user/user-profile
