--- a/docs/components/user/user-profile.mdx
+++ b/docs/components/user/user-profile.mdx
@@ -79,5 +79,9 @@ All props below are optional.
 | `path` | `string` | The path where the component is mounted on when path-based routing is used e.g. /sign-in. |
 | `additionalOAuthScopes` | `object` | Specify additional scopes per OAuth provider that your users would like to provide if not already approved. <br />e.g. `{google: ['foo', 'bar'], github: ['qux']}`. |
 
+## Customization
+
+To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
+
 [components-ref]: /docs/components/overview
 [ap-ref]: /docs/account-portal/overview
