--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -307,12 +307,13 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
   <Tab>
     A Route Handler added to [`publicRoutes`](/docs/references/nextjs/auth-middleware#making-pages-public-using-public-routes) can still use the [`auth()`](/docs/references/nextjs/auth) helper to return information about the user or their authentication state, or to control access to some or all of the Route Handler. The `auth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
 
-    ```tsx filename="app/api/user/route.[jsx/tsx]"
+    ```tsx filename="app/api/user/route.tsx"
     import { NextResponse } from 'next/server';
     import { auth } from '@clerk/nextjs';
 
     export async function GET() {
 
+      // Get the userId from auth() -- if null, the user is not logged in
       const { userId } = auth();
 
       if (!userId) {
@@ -336,6 +337,7 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
 
     export async function GET() {
 
+      // Get the userId from auth() -- if null, the user is not logged in
       const { userId } = auth();
 
       if (!userId) {
