--- a/docs/references/nextjs/trpc.mdx
+++ b/docs/references/nextjs/trpc.mdx
@@ -48,7 +48,7 @@ CLERK_SECRET_KEY={{secret}}
 
 ### Configure middleware
 
-[Middleware](/docs/references/nextjs/auth-middleware) needs to be placed at the root of your project. This allows you to use Clerk server-side APIs.
+[Middleware](/docs/references/nextjs/auth-middleware) allows you to use Clerk server-side APIs. Create a `middleware.ts` file. If your application uses the `src/` directory, your `middleware.ts` file should be placed inside the `src/` folder. If you are not using a `src/` directory, place the `middleware.ts` file in your root directory.
 
 ```ts filename="middleware.ts"
 import { authMiddleware } from "@clerk/nextjs";
