--- a/docs/advanced-usage/satellite-domains.mdx
+++ b/docs/advanced-usage/satellite-domains.mdx
@@ -83,7 +83,7 @@ The `URL` mentioned above is the request url for server side usage or the curren
 
 <Tabs items={['Next.js', 'Remix']}>
   <Tab>
-    You can embed the `<SignIn />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The `<SignIn />` component should be mounted on a public page.
+    You can embed the [`<SignIn />`][signin] component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The [`<SignIn />`][signin] component should be mounted on a public page.
 
     <CodeBlockTabs options={["<ClerkProvider />", "Middleware"]}>
     ```jsx filename="_app.tsx"
@@ -172,3 +172,5 @@ You can repeat this process and create as many satellite applications as you nee
 You can also check out the [example repository](https://github.com/clerkinc/clerk-nextjs-multi-domain-example) with a primary and a satellite Next.js application.
 
 If you have any questions about satellite domains, or you're having any trouble setting this up, please contact support@clerk.com
+
+[signin]: /docs/components/authentication/sign-in
