--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -9,7 +9,7 @@ The `authMiddleware()` helper integrates Clerk authentication into your Next.js 
 
 ## Usage
 
-Create the `middleware.ts` file in the root folder of your application, or inside the `src/` if that is how your app is set up.
+Create a `middleware.ts` file. If your application uses the `src/` directory, your `middleware.ts` file should be placed inside the `src/` folder. If you are not using a `src/` directory, place the `middleware.ts` file in your root directory.
 
 <Callout type="info">
   For more information about middleware in Next.js, see the [Next.js documentation](https://nextjs.org/docs/pages/building-your-application/routing/middleware).
