add template param to getToken; update copy regarding tokens/jwt templates

--- a/docs/references/javascript/session.mdx
+++ b/docs/references/javascript/session.mdx
@@ -93,7 +93,7 @@ Retrieves the user's session token for the given template or the default clerk t
 | Name | Type | Description |
 | --- | --- | --- |
 | `leewayInSeconds` | `number` | The number of seconds to allow the token to be cached for. |
-| `template?` | `string` | The name of the JWT template to generate a new token from. |
+| `template?` | `string` | The name of the JWT template from the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=jwt-templates) to generate a new token from.<br/>E.g. 'firebase', 'grafbase', or your custom template's name. |
 | `throwOnError?` | `boolean` | Whether to throw an error or return an empty string, if an error occurs. |
 | `skipCache?` | `boolean` | Whether to skip the cache lookup and force a call to the server instead, even within the TTL. Useful if the token claims are time-sensitive or depend on data that can be updated (e.g. user fields).<br />Defaults to `false`. |
 
