expand on the explanation of jwt claims for an impersonated session

--- a/docs/backend-requests/making/jwt-templates.mdx
+++ b/docs/backend-requests/making/jwt-templates.mdx
@@ -61,7 +61,7 @@ In the previous example, "automatically-included claims" was briefly mentioned. 
 * `exp`: expiration time - the time after which the token will expire, as a Unix timestamp. Determined using the **Token lifetime** template setting in the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=jwt-templates).
 * `iat`: issued at - the time at which the token was issued, as a Unix timestamp (e.g. `1516239022`).
 * `iss`: issuer - the Frontend API URL of your instance (e.g. `https://clerk.your-site.com`).
-* `jti`: a random alphanumeric string, used as a unique identifier for the token.
+* `jti`: JWT ID - a random alphanumeric string, used as a unique identifier for the token.
 * `nbf`: not before - the time before which the token is considered invalid, as a Unix timestamp. Determined using the **Allowed Clock Skew** template setting in the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=jwt-templates).
 * `sub`: subject - the ID of the current user of the session (e.g. `user_123`).
 
