--- a/docs/backend-requests/resources/session-tokens.mdx
+++ b/docs/backend-requests/resources/session-tokens.mdx
@@ -14,9 +14,9 @@ Below are the default session claims that Clerk generates for you:
 * `azp`: authorized party - the `Origin` header that was included in the original Frontend API request made from the user. Most commonly, it will be the URL of the application (e.g. `https://example.com`). This claim could be omitted if, for privacy-related reasons, `Origin` is empty or null.
 * `exp`: expiration time - the time after which the token will expire, as a Unix timestamp. Determined using the **Token lifetime** template setting in the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=jwt-templates).
 * `iat`: issued at - the time at which the token was issued, as a Unix timestamp (e.g. `1516239022`).
-* `iss`: issuer - the Frontend API URL of your instance (e.g. `https://clerk.your-site.com`).
+* `iss`: issuer - the Frontend API URL of your instance (e.g. `https://clerk.your-site.com` if production instance, `https://your-site.clerk.accounts.dev` if development instance).
 * `nbf`: not before - the time before which the token is considered invalid, as a Unix timestamp. Determined using the **Allowed Clock Skew** template setting in the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=jwt-templates).
-* `sid`: session ID - the ID of the current session.
+* `sid`: session ID - the ID of the current session (e.g. `sess_123`).
 * `sub`: subject - the ID of the current user of the session (e.g. `user_123`).
 
 The following claims are only included if the user is part of an organization:
@@ -24,10 +24,7 @@ The following claims are only included if the user is part of an organization:
 * `org_id`: organization ID - the ID of the currently active organization that the user belongs to.
 * `org_slug`: organization slug - the slug of the currently active organization that the user belongs to.
 * `org_role`: organization role - the role of the user in the currently active organization.
-
-The `act` claim will only be included if the user is impersonating another user:
-
-* `act`: actor - will include the ID of the impersonating user. See [user impersonation](/docs/custom-flows/user-impersonation#jwt-claims) for more information.
+* `act`: actor - will only be included if the user is impersonating another user. See [user impersonation](/docs/custom-flows/user-impersonation#jwt-claims) for more information.
 
 <Images
   width={894}
