Update route-handlers.mdx (#439)

--- a/docs/references/nextjs/route-handlers.mdx
+++ b/docs/references/nextjs/route-handlers.mdx
@@ -10,7 +10,7 @@ Clerk provides helpers to allow you to protect your Route Handlers, fetch the cu
 
 If you aren't protecting your Route Handler using Clerk's middleware, you can check if the user is logged in.
 
-```ts filename="app/route.ts"
+```ts filename="app/api/route.ts"
 import { NextResponse } from 'next/server';
 import { auth } from '@clerk/nextjs';
 
@@ -31,7 +31,7 @@ export async function GET() {
 
 Clerk provides integrations with a number of popular databases. Below is an example of retrieving a template to be used.
 
-```ts filename="app/route.ts"
+```ts filename="app/api/route.ts"
 import { NextResponse } from 'next/server';
 import { auth } from '@clerk/nextjs';
 export async function GET() {
@@ -50,7 +50,7 @@ export async function GET() {
 
 In some cases, you might need the current user in your Route Handler. Clerk provides an asynchronous helper called `currentUser` to retrieve it.
 
-```ts filename="app/route.ts"
+```ts filename="app/api/route.ts"
 import { NextResponse } from 'next/server';
 import { currentUser } from '@clerk/nextjs';
 export async function GET() {
@@ -68,7 +68,7 @@ export async function GET() {
 
 The `clerkClient` helper allows you to retrieve and update data from Clerk's API. 
 
-```ts filename="app/route.ts"
+```ts filename="app/api/route.ts"
 import { NextResponse } from 'next/server';
 import { auth, clerkClient } from '@clerk/nextjs';
 
