fixing link I broke

--- a/docs/references/nextjs/custom-signup-signin-pages.mdx
+++ b/docs/references/nextjs/custom-signup-signin-pages.mdx
@@ -5,7 +5,7 @@ description: "Learn how to add custom sign-in and sign-up pages to your Next.js 
 
 # Build your own sign-in and sign-up pages for your Next.js App with Clerk
 
-Clerk offers a set of [prebuilt components](/docs/components/overview) and [custom flows](/docs/custom-flows/overview) that you can use to embed sign in, sign up, and other user management functions into your Next.js application. This is how you use the [`<SignIn />`](/docs/components/authentication/sign-in) and [`<SignUp />`](/docs/components/authentication/sign-up) components with the [Next.js optional catch-all route](/docs/pages/building-your-application/routing/dynamic-routes#catch-all-segments).
+Clerk offers a set of [prebuilt components](/docs/components/overview) and [custom flows](/docs/custom-flows/overview) that you can use to embed sign in, sign up, and other user management functions into your Next.js application. This is how you use the [`<SignIn />`](/docs/components/authentication/sign-in) and [`<SignUp />`](/docs/components/authentication/sign-up) components with the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#catch-all-segments).
 
 <Callout>
     Just getting started with Clerk and Next.js? Try our [quickstart](/docs/quickstarts/nextjs)!
