updating Clerk setup tut, rejiggering the Next.js SDK sidebar

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -121,7 +121,7 @@ The [`<ClerkProvider />`][clerk-provider] component provides active session and 
   </Tab>
 </Tabs>
 
-### Require authentication to access you app
+### Require authentication to access your app
 
 Now that Clerk is installed and mounted in your application, you can decide which pages are public and which should should require authentication to access. 
 
