--- a/docs/references/nextjs/overview.mdx
+++ b/docs/references/nextjs/overview.mdx
@@ -5,7 +5,15 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 
 # Overview
 
-Clerk makes it simple to add authentication to your Next.js application. Looking to get started? Check out our [getting started guide](/docs/quickstarts/nextjs). If you want to learn more about the capabilities and methods available from Clerk's Next.js SDK, check out the reference content below.
+Clerk makes it simple to add authentication to your Next.js application. This documentation covers the capabilities and methods available from Clerk's Next.js SDK.
+
+## guides
+
+## References
+
+## Authentication object
+
+Both `auth()` and `getAuth()` return an Authentication Object. This JavaScript object contains important information like session data, your user's ID, as well as their org ID. Learn more about the Authentication Object [here](/docs/references/nextjs/authentication-object).
 
 ## `authMiddleware()`
 
