--- a/docs/references/nextjs/overview.mdx
+++ b/docs/references/nextjs/overview.mdx
@@ -7,11 +7,14 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 
 Clerk makes it simple to add authentication to your Next.js application. This documentation covers the capabilities and methods available from Clerk's Next.js SDK.
 
-## guides
+## Guides
+
+- [Add custom sign up and sign in pages](/docs/references/nextjs/custom-signup-signin-pages)
+- [Integrate Clerk into your app with tRPC](/docs/references/nextjs/trpc)
 
 ## References
 
-## Authentication object
+### Authentication object
 
 Both `auth()` and `getAuth()` return an Authentication Object. This JavaScript object contains important information like session data, your user's ID, as well as their org ID. Learn more about the Authentication Object [here](/docs/references/nextjs/authentication-object).
 
@@ -55,7 +58,3 @@ Clerk continues to provide drop-in support for the Next.js Pages Router. In addi
 
 - [`getAuth()`](/docs/references/nextjs/get-auth)
 - [`buildClerkProps()`](/docs/references/nextjs/build-clerk-props)
-
-## Other useful resources
-
-- [Using tRPC](/docs/references/nextjs/trpc)
