--- a/docs/references/nextjs/trpc.mdx
+++ b/docs/references/nextjs/trpc.mdx
@@ -1,9 +1,9 @@
 ---
-title: Using tRPC and Next.js
+title: Integrate Clerk into your Next.js app with tRPC
 description: Learn how to integrate Clerk into your Next.js application using tRPC. tRPC can be used with Clerk, but requires a few tweaks from a traditional Clerk + Next.js setup.
 ---
 
-# Using tRPC and Next.js
+# Integrate Clerk into your Next.js app with tRPC
 
 Learn how to integrate Clerk into your Next.js application using [tRPC](https://trpc.io/). tRPC can be used with Clerk, but requires a few tweaks from a traditional Clerk + Next.js setup.
 
