adding clientside helpers to overview

--- a/docs/references/nextjs/overview.mdx
+++ b/docs/references/nextjs/overview.mdx
@@ -18,18 +18,15 @@ Clerk makes it simple to add authentication to your Next.js application. This do
 
 Both `auth()` and `getAuth()` return an Authentication Object. This JavaScript object contains important information like session data, your user's ID, as well as their org ID. Learn more about the Authentication Object [here](/docs/references/nextjs/authentication-object).
 
-## `authMiddleware()`
+### `authMiddleware()`
 
 The `authMiddleware()` helper integrates Clerk authentication into your Next.js application through middleware. It allows you to integrate authorization into both the client and server of your application. You can learn more [here](/docs/references/nextjs/auth-middleware).
 
 ## Client-side helpers
 
-Because Clerk Next.js is a wrapper around Clerk React, you can utilize the hooks that Clerk React provides. These hooks give you access to the [`Clerk`](/docs/references/javascript/clerk/clerk) object, and a set of useful helper methods for signing in and signing up. You can learn more about these hooks [here](/docs/references/react/use-user).
+Because Clerk Next.js is a wrapper around Clerk React, you can utilize the hooks that Clerk React provides. These hooks give you access to the [`Clerk`](/docs/references/javascript/clerk/clerk) object, and a set of useful helper methods for signing in and signing up. You can learn more about these hooks [in the React SDK reference](/docs/references/react/overview).
 
-{/* Another option for copy. 
-TODO: We can use a partial here.
-
-Clerk provides several helpers for integrating authentication into your Next.js application's client-side code.
+{/* TODO: We can use a partial here. */}
 
 - [`useUser()`](/docs/references/react/use-user)
 - [`useClerk()`](/docs/references/react/use-clerk)
@@ -40,8 +37,6 @@ Clerk provides several helpers for integrating authentication into your Next.js 
 - [`useSessionList()`](/docs/references/react/use-session-list)
 - [`useOrganization()`](/docs/references/react/use-organization)
 - [`useOrganizationList()`](/docs/references/react/use-organization-list)
-
-*/}
 
 ## App Router
 
