Replace the `flag` word with `directive`

--- a/docs/components/customization/organization-profile.mdx
+++ b/docs/components/customization/organization-profile.mdx
@@ -17,7 +17,7 @@ To add a custom page to the [`<OrganizationProfile />`][orgprofile-ref] componen
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
-    `<OrganizationProfile.Page />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
+    `<OrganizationProfile.Page />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` directive must be added.
 
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
       ```jsx filename="/app/organization-profile/[[...organization-profile]]/page.tsx"
@@ -124,7 +124,7 @@ You can add external links to the [`<OrganizationProfile />`][orgprofile-ref] na
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
-    `<OrganizationProfile.Link />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
+    `<OrganizationProfile.Link />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` directive must be added.
 
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
       ```jsx filename="/app/organization-profile/[[...organization-profile]]/page.tsx"
@@ -210,7 +210,7 @@ If you want to reorder the default routes (`Members` and `Settings`) in the `Org
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
-    `<OrganizationProfile.Page />` and `<OrganizationProfile.Link />` can be rendered **only on the client**.  For Next.js applications that use App Router, the `"use client";` flag needs to be used.
+    `<OrganizationProfile.Page />` and `<OrganizationProfile.Link />` can be rendered **only on the client**.  For Next.js applications that use App Router, the `"use client";` directive needs to be used.
 
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
       ```jsx filename="/app/organization-profile/[[...organization-profile]]/page.tsx"
@@ -315,7 +315,7 @@ If you are using the `<OrganizationSwitcher />` component with the default props
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
-    `<OrganizationSwitcher.OrganizationProfilePage />` and `<OrganizationSwitcher.OrganizationProfileLink />` can be rendered **only on the client**.  For Next.js applications using App Router, the `"use client";` flag must be added.
+    `<OrganizationSwitcher.OrganizationProfilePage />` and `<OrganizationSwitcher.OrganizationProfileLink />` can be rendered **only on the client**.  For Next.js applications using App Router, the `"use client";` directive must be added.
 
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
       ```jsx filename="/app/components/Header.tsx"
