--- a/docs/components/customization/user-profile.mdx
+++ b/docs/components/customization/user-profile.mdx
@@ -17,7 +17,7 @@ To add a custom page to the [`<UserProfile />`][userprofile-ref] component, use 
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
-    `<UserProfile.Page />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
+    `<UserProfile.Page />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` directive must be added.
 
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
       ```jsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
@@ -124,7 +124,7 @@ You can add external links to the [`<UserProfile />`][userprofile-ref] navigatio
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
-    `<UserProfile.Link />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
+    `<UserProfile.Link />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` directive must be added.
 
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
       ```jsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
@@ -210,7 +210,7 @@ If you want to reorder the default routes (`Account` and `Security`) in the `Use
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
-    `<UserProfile.Page />` and `<UserProfile.Link />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
+    `<UserProfile.Page />` and `<UserProfile.Link />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` directive must be added.
 
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
       ```jsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
@@ -315,7 +315,7 @@ If you are using the `<UserButton />` component with the default props (where th
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
-    `<UserButton.UserProfilePage />` and `<UserButton.UserProfileLink />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
+    `<UserButton.UserProfilePage />` and `<UserButton.UserProfileLink />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` directive must be added.
 
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
       ```jsx filename="/app/components/Header.tsx"
