chore: Add available scopes to OAuth 2 Provider page

--- a/docs/advanced-usage/clerk-idp.mdx
+++ b/docs/advanced-usage/clerk-idp.mdx
@@ -33,7 +33,7 @@ curl
  -X POST https://api.clerk.com/v1/oauth_applications \
  -H "Authorization: Bearer <CLERK_SECRET_KEY>"  \
  -H "Content-Type: application/json" \
- -d {"callback_url":"https://oauth-client.com/oauth2/callback", "name": "oauth_app_1"}
+ -d {"callback_url":"https://oauth-client.com/oauth2/callback", "name": "oauth_app_1", "scopes": "profile email"}
 ```
 
 To create an OAuth Application that uses the authorization code flow with proof of key exchange (PKCE), set `public` to `true` in the POST request body.
@@ -76,6 +76,6 @@ Now that you have set up an OAuth application in Clerk, you will need to configu
 * **Client Secret**: Confidential secret used to authenticate your OAuth application
 * **Authorization URL**: Used by the Client to request authorization from your user
 * **Token URL**: Used by the Client to retrieve access tokens
-* **Scopes**: OAuth scopes used to grant access to the Client. Clerk only supports `profile` and `email` at this point
+* **Scopes**: OAuth scopes used to grant access to the Client. Clerk supports `profile`, `email`, `public_metadata`, and `private_metadata`. The metadata scopes ensure that the user info endpoint returns the user's public, private and unsafe metadata.
 * **User Info URL**: Used by the Client to retrieve the email address and profile (username, first and last name) associated to your user
 </Steps>
