fixing borked link to ClerkProvider

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -70,7 +70,7 @@ CLERK_SECRET_KEY={{secret}}
 
 ### Wrap your app in `<ClerkProvider />`
 
-The [`<ClerkProvider />`][clerk-provider] component provides active session and user context to Clerk's hooks and other components. For this project, it makes sense to wrap the `<html/>` element with `<ClerkProvider />`. This makes the active session and user context accessible anywhere within the app.
+The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. For this project, it makes sense to wrap the `<html/>` element with `<ClerkProvider />`. This makes the active session and user context accessible anywhere within the app.
 
 <Tabs items={["App Router version", "Page Router version"]}>
   <Tab>
