Custom Pages for `<UserProfile />` and `<OrganizationProfile />` (#404)
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/references/javascript/clerk/organization-profile.mdx
+++ b/docs/references/javascript/clerk/organization-profile.mdx
@@ -236,6 +236,103 @@ Closes the organization profile overlay.
 function closeOrganizationProfile(): void;
 ```
 
+## Custom Pages
+
+You can add customized pages for the [`<OrganizationProfile />`][orgprofile-ref] component by using the `customPages` prop.
+
+
+<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+  ```typescript {11}
+  import Clerk from '@clerk/clerk-js';
+
+  const clerk = new Clerk('pk_[publishable_key]');
+  await clerk.load();
+
+  clerk.openOrganizationProfile({
+    customPages: [
+      {
+        url: "custom-page",
+        label: "Custom Page",
+        mountIcon: (el) => {
+            el.innerHTML = "👋";
+        },
+        unmountIcon: (el) => {
+            el.innerHTML = "";
+        },
+        mount: (el) => {
+            el.innerHTML = `
+              <h1><b>Custom Page</b></h1>
+              <p>This is the content of the custom page.</p>
+              `;
+        },
+        unmount: (el) => {
+            el.innerHTML = "";
+        },
+      },
+      {
+        url: "/other-page",
+        label: "Other Page",
+        mountIcon: (el) => {
+            el.innerHTML = "🌐";
+        },
+        unmountIcon: (el) => {
+            el.innerHTML = "";
+        },
+      }
+    ]
+  });
+
+  ```
+
+  ```html {14}
+  <script>
+    const script = document.createElement('script');
+    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
+    script.async = true;
+    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+
+    script.addEventListener('load', async function () {
+      await window.Clerk.load();
+
+      window.Clerk.openOrganizationProfile({
+        customPages: [
+          {
+            url: "custom-page",
+            label: "Custom Page",
+            mountIcon: (el) => {
+                el.innerHTML = "👋";
+            },
+            unmountIcon: (el) => {
+                el.innerHTML = "";
+            },
+            mount: (el) => {
+                el.innerHTML = `
+                      <h1><b>Custom Page</b></h1>
+                      <p>This is the content of the custom page.</p>
+                      `;
+            },
+            unmount: (el) => {
+                el.innerHTML = "";
+            },
+          },
+          {
+            url: "/other-page",
+            label: "Other Page",
+            mountIcon: (el) => {
+                el.innerHTML = "🌐";
+            },
+            unmountIcon: (el) => {
+                el.innerHTML = "";
+            },
+          }
+        ]
+      });
+    });
+    document.body.appendChild(script);
+  </script>
+  ```
+</CodeBlockTabs>
+
 ## `OrganizationProfileProps`
 
 All props below are optional.
@@ -246,7 +343,10 @@ All props below are optional.
 | `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. |
 | `path` | `string` | The path where the component is mounted when path-based routing is used.<br/>e.g. `/user-profile`.<br />This prop is ignored in hash-based routing. |
 | `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `customPages` | <code>[CustomPage][custompage-ref][]</code> | An array of custom pages to add to the organization profile. |
+
 
 [orgprofile-ref]: /docs/components/organization/organization-profile
 [components-ref]: /docs/components/overview
 [ap-ref]: /docs/account-portal/overview
+[custompage-ref]: /docs/references/javascript/types/custom-page
