updating header info

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -1,5 +1,5 @@
 ---
-title: Use Clerk with Next.js
+title: Add authentication and user management to your Next.js app with Clerk in 7 minutes
 description: Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application. Clerk works seamlessly on both client side and server side components.
 ---
 
